--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,48 @@
-authlib==0.11
-flask==1.0.2
-google-api-python-client
-google-auth
-virtualenv
+appdirs==1.4.4
+Authlib==0.11
+blinker==1.4
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.7
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.0.2
+Flask-Mail==0.9.1
+flask-marshmallow==0.14.0
+google-api-core==1.26.3
+google-api-python-client==2.1.0
+google-auth==1.28.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
+httplib2==0.19.1
+idna==2.10
+importlib-metadata==3.10.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+marshmallow==3.10.0
+marshmallow-sqlalchemy==0.24.2
+packaging==20.9
+protobuf==3.15.7
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyJWT==2.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
+six==1.15.0
+SQLAlchemy==1.3.23
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+uritemplate==3.0.1
+urllib3==1.26.4
+virtualenv==20.4.3
+Werkzeug==1.0.1
+zipp==3.4.1
