--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ distlib==0.3.1
 filelock==3.0.12
 Flask==1.0.2
 Flask-Mail==0.9.1
+Flask-Cors=3.0.10
 flask-marshmallow==0.14.0
 google-api-core==1.26.3
 google-api-python-client==2.1.0
