--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ distlib==0.3.1
 filelock==3.0.12
 Flask==1.0.2
 Flask-Mail==0.9.1
-Flask-Cors=3.0.10
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 google-api-core==1.26.3
 google-api-python-client==2.1.0
@@ -28,7 +28,7 @@ marshmallow==3.10.0
 marshmallow-sqlalchemy==0.24.2
 packaging==20.9
 protobuf==3.15.7
-psycopg2==2.8.6
+psycopg2-binary>=2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
