--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==3.4.7
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.0.2
+Flask-APScheduler==1.12.2
 Flask-Mail==0.9.1
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
